<resources>
    <string name="app_name">Organizame</string>

    <!--PRESENTACION-->
    <string name="Company">LircayHUB</string>
    <string name="developer">Desarrollador</string>
    <string name="developerName">Hugo Valdés</string>
    <string name="Welcome">Bienvenido</string>

    <!--PANTALLA EMERGENTE INFORMACION-->
    <string name="dialog_content">Este monton es el presupuesto total con el cual usted dispone para su hogar</string>
    <string name="alertaforedit">El monton Total debe ser menor a la suma de los componentes </string>
    <string name="alertafocategoria"> Has excedido el monto de una categoría </string>
    <string name="reset"> Los valores se han reiniciado</string>
    <string name="deletPrducto">¿Desea eliminar este producto?</string>

    <!--PANTALLA EMERGENTE BTN-->
    <string name="IngreseMonto"> Ingrese un Monto </string>
    <string name="Aceptar"> Aceptar </string>
    <string name="EliminarCuenta"> Eliminar cuenta </string>
    <string name="SeguroEliminar"> ¿Está seguro que desea eliminar la cuenta? </string>
    <string name="Si">Sí</string>

    <!--TOAST-->
    <string name="addProducto">SE AÑADIO EL PRODUCTO A SU LISTA</string>
    <string name="addFail">ERROR AL AÑADIR EL PRODUCTO</string>
    <string name="llenarCampos">DEBE LLENAR LOS CAMPOS OBLIGATORIOS</string>
    <string name="editFail">Error al modificar su Producto</string>
    <string name="editReady">Modificacion realizada</string>
    <string name="ResetDay">HOY SE LLEVARA ACABO EL REINICIO DE TUS MONTOS</string>


    <!--INDICADORES-->
    <string name="Nombre">Nombre: </string>
    <string name="Fechas">Fecha: </string>
    <string name="Valor">Valor: </string>
    <!--VALIDADORES -->
    <string name="alerta">Ingrese un monto</string>
    <string name="monto_alerta">El monto excede su presupuesto</string>
    <string name="dia_alerta">Ingrese fecha correcta</string>
    <string name="exede_valor"> Esta exediendo su presupuesto</string>


    <!--BTN -->
    <string name="next">Siguiente</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="add">+</string>


    <string name="total">Monto Total</string>
    <string name="MontoNoDestinado">Monto No Destinado</string>
    <string name="day">día</string>
    <string name="hintvalues">000.000.000</string>
    <string name="ic_value">$</string>
    <string name="dateInformation">Fecha de cierre de periodo</string>
    <string name="date">DD/MM/AA</string>
    <string name="Gasto">Gasto:</string>

    <!--Resumen-->
    <string name="presupuestoxgasto">PRESUPUESTO / GASTOS</string>


    <string name="category">Categoria</string>
    <!-- CATEGORY -->
    <string name="category_1">Arriendo o Hipoteca</string>
    <string name="category_2">Alimentacion</string>
    <string name="category_3">Transporte</string>
    <string name="category_4">Servicios Basicos</string>
    <string name="category_5">Educacion</string>
    <string name="category_6">Deudas</string>
    <string name="category_7">Ahorros e Inversiones</string>
    <string name="Fecha">Fecha</string>

    <!-- MENU ITEMS -->
    <string name="item0">Resumen</string>
    <string name="item1">Presupuesto</string>
    <string name="item2">Gastos</string>
    <string name="item3">Indicadores</string>
    <string name="item4">Eliminar Cuenta</string>

    <!-- HTTP REQUEST -->
    <string name="htttp1">Feriados</string>
    <string name="htttp2">Dolar</string>
    <string name="htttp3">UF</string>
    <string name="htttp1Resumen">Feriado:</string>
    <string name="htttp2Resumen">Dolar:</string>
    <string name="htttp3Resumen">UF:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--Ordenando-->
    <string name="orden">Orden</string>
    <string name="orden1">Más Recientes</string>
    <string name="orden2">Más Antiguo</string>
    <string name="orden3">Alfabeto</string>


    <!-- GASTO -->
    <string name="product">producto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>