<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumenActivity">


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="0"
                android:contentDescription="@string/category_1"
                app:srcCompat="@drawable/ic_arriendo"
                tools:ignore="InefficientWeight" />

            <EditText
                android:id="@+id/txtResumenArriendp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_1"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/category_1"
                android:inputType="number"
                android:minHeight="50dp"
                tools:ignore="Deprecated,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight,UselessParent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="0"
                android:contentDescription="@string/category_2"
                app:srcCompat="@drawable/ic_alimentacion"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/txtResumenAlimentacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_2"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/category_2"
                android:inputType="number"
                android:minHeight="50dp"
                tools:ignore="Deprecated,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/category_3"
                app:srcCompat="@drawable/ic_transporte" />

            <EditText
                android:id="@+id/txtResumenTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_3"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/category_3"
                android:inputType="number"
                android:minHeight="50dp"
                tools:ignore="Deprecated,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/category_4"
                app:srcCompat="@drawable/ic_serviciosbasicos" />

            <EditText
                android:id="@+id/edittxt_Costo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_4"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/category_4"
                android:inputType="number"
                android:minHeight="50dp"
                tools:ignore="Deprecated,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/category_5"
                app:srcCompat="@drawable/ic_education" />

            <EditText
                android:id="@+id/txtResumenEducacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_5"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/category_5"
                android:inputType="number"
                android:minHeight="50dp"
                tools:ignore="Deprecated,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/category_7"
                app:srcCompat="@drawable/ic_ahorros" />

            <EditText
                android:id="@+id/txtResumenAhorro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_7"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/category_7"
                android:inputType="number"
                android:minHeight="50dp"
                tools:ignore="Deprecated,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/category_6"
                app:srcCompat="@drawable/ic_gastos" />

            <EditText
                android:id="@+id/txtResumenDeuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/category_6"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/category_6"
                android:inputType="number"
                android:minHeight="50dp"
                tools:ignore="Deprecated,VisualLintTextFieldSize" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/htttp1Resumen"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txthttpFeriado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/htttp1"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/htttp2Resumen"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/txthttpDolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/htttp2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/htttp3Resumen"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txthttpUF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/htttp3"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/presupuestoxgasto"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>