<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_http1"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:text="@string/htttp1"
            android:textColor="#039be5"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="0dp"
            app:iconPadding="0dp"
            app:strokeColor="#039be5"
            app:strokeWidth="2dp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_http2"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:text="@string/htttp2"
            android:textColor="#039be5"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="0dp"
            app:strokeColor="#039be5"
            app:strokeWidth="2dp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_http3"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:text="@string/htttp3"
            android:textColor="#039be5"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="0dp"
            app:strokeColor="#039be5"
            app:strokeWidth="2dp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_background"
        android:padding="10dp"

        >

        <TextView
            android:id="@+id/txt_informationhttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>
